--- a/git2consul/config.json
+++ b/git2consul/config.json
@@ -1,8 +1,10 @@
 {
   "version": "1.0",
   "repos" : [{
-    "name" : "sample",
+    "name" : "config",
     "url" : "https://github.com/edgar615/spring-cloud-consul-config-data.git",
+    "include_branch_name" : false,
+    "branches" : ["master"],
     "hooks": [{
       "type" : "polling",
       "interval" : "1"
