--- a/consul-config/src/main/resources/application.yml
+++ b/consul-config/src/main/resources/application.yml
@@ -9,7 +9,8 @@ management:
   info:
     defaults:
       enabled: true
-  endpoint:
-    health:
-      show-details: "ALWAYS"
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
